# metody-numeryczne-projekt

./: CMakeLists.txt  README.md
examples/: example_runner.cpp
include/: approximation.hpp  differential_equations.hpp  integration.hpp  interpolation.hpp  linear_algebra.hpp  nonlinear_equations.hpp
src/: approximation.cpp  differential_equations.cpp  integration.cpp  interpolation.cpp  linear_algebra.cpp  nonlinear_equations.cpp
tests/: test_runner.cpp
